# df-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: api.rs  error.rs  lib.rs  util.rs
src/api/: auction.rs  character.rs  image.rs  item.rs
src/model/: auction.rs  character.rs  item.rs  mod.rs  serde_helper.rs
src/model/auction/: raw.rs
src/model/item/: raw.rs
tests/: deserializing_test.rs
