[package]
name = "df-client"
version = "0.0.1"
edition = "2021"
description = "API client for dungeon and fighter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
convert_case = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
urlencoding = "2.1.2"
