[package]
name = "df-rs"
version = "0.0.1"
edition = "2021"
description = "API client for dungeon and fighter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
convert_case = "0.6"
futures = "0.3"
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = "3"
thiserror = "1"
time = { version = "0.3.23", features = ["macros", "serde-human-readable"] }
urlencoding = "2.1.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util", "rt"] }
